# web-core

./: Cargo.toml  LICENSE  README.md
src/: cors.rs  lib.rs  macros.rs  web_core.rs
src/auth/: auth_options.rs  auth_service.rs  authenticated_user.rs  authentication_middleware.rs  google.rs  jwt_claims.rs  mod.rs  password_hasher.rs
src/aws/: mail.rs  mod.rs
src/aws/cloudfront/: country.rs
src/error/: authentication.rs  bad_request.rs  field_validation.rs  mod.rs  not_found.rs  something_went_wrong.rs
src/middleware/: logging_middleware.rs  middleware_handler.rs  mod.rs
src/middleware/headers/: mod.rs
src/reqwest/: mod.rs  post_api.rs
src/test/: mod.rs  router_extensions.rs
src/utils/: signatory.rs
src/validators/: password_validator.rs
