[package]
name = "web-core"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "9.3.1"
reqwest = {version ="0.12.22", default-features = false, features = ["json", "rustls-tls",  "charset", "http2", "system-proxy"]}
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
strum_macros = "0.27.2"
thiserror = "2.0.16"
tower-http = { version = "0.6.6", features = ["cors"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
validator-async = "0.20.0"
lambda_http = "0.13.0"
http = "1.3.1"
google-oauth = "1.11.4"

[features]
local = []
test_mode = []
